=======================
Stalker Pyramid Changes
=======================

0.1.0.b4
========

* **Update:** Updating both the code and the style to Twitter Bootstrap.
* **Update:** Main Navigation Bar is updated both the code and the style to
  Twitter Bootstrap.
* **Update:** TaskJuggler error messages are now correctly displayed in the UI.
* **Update:** Updated the GanttChart theme to ACE.

0.1.0.b3
========

* **Update:** Redesigned all the routes to comply with a RESTful service
  scheme.
* **New:** Leaf tasks on gantt chart now have a new functionality called
  "Request Review" which can be invoked through the context menu. It will
  create a new Ticket and assign it to the task responsible.
* **New:** Calling 'Request Review' now will send an email to the responsible
  and the logged in user.
* **Update:** It is now possible to upload multiple References.
* **Update:** Reference dialog now has a tag field.
* **Update:** "Duplicate Task Hierarchy" now confirms the action to the user
  before doing anything.
* **New:** It is now possible to create new Version files by uploading files to
  the server. Though the stalker server now needs to have a link to the file
  server.
* **Update:** Updating a Studiowide Vacation is not allowed in user vacation
  list.
* **Update:** All the DGrid table columns are now resizable.
* **Update:** GanttColumn now scrolls to the desired date so that the date will
  be in the middle of the view.
* **Update:** GanttColumn now shows the width of the days/weeks correctly.
* **New:** References are now shown in a dojox.image.LightBox dialog.
* **Fix:** Fixed **get_permissions_from_multi_dict()**, it is now skipping
  unknown access, action and class_name entries.
* **Fix:** Fixed Gantt Chart not showing completed parent tasks id column with
  a in green background.
* **New:** Added menu for Projects in Gantt Chart.
* **Fix:** The bugs after RESTful service scheme in appending user to different
   types of entity are fixed.